test_programs/compile_failure/noirc_frontend_tests_incorrect_generic_count_on_type_alias/src/main.nr

    pub struct Foo {}
    pub type Bar = Foo<i32>;
    fn main() {
        let _ = Foo {}; // silence Foo never constructed warning
    }
    